# HarborGate

./: .gitignore  CLAUDE.md  Cargo.toml  HarborBeacon-HarborGate-Agent-Contract-v1.1-Proposal.md  HarborBeacon-HarborGate-Agent-Contract-v1.5.md  HarborBeacon-HarborGate-Agent-Contract-v2.0.md  HarborBeacon-HarborGate-v1.5-Closeout-2026-04-19.md  HarborBeacon-HarborGate-v1.5-Cutover-Checklist.md  HarborBeacon-HarborGate-v2.0-Cutover-Checklist.md  HarborBeacon-HarborGate-v2.0-Upgrade-Runbook.md  HarborNAS-IM-Gateway-Agent-Contract-v1.1-Proposal.md  HarborNAS-IM-Gateway-Agent-Contract-v1.3.md  HarborNAS-IM-Gateway-Agent-Contract-v1.5.md  PLAN.md  README.md  ROADMAP.md  WORKLOG.md  justfile  pyproject.toml
.github/workflows/: release.yml  rust-ci.yml
debian/: control  harboros-im-gate.service  postinst  prerm
docs/: HarborBeacon-HarborGate-Agent-Contract-v1.3.md  HarborBeacon-HarborGate-Agent-Contract-v1.5.md  HarborBeacon-HarborGate-Agent-Contract-v3.0.md  HarborBeacon-HarborGate-v1.5-Cutover-Checklist.md  HarborBeacon-HarborGate-v2.0-Cutover-Checklist.md
rust/harborgate/: Cargo.toml
rust/harborgate/src/: gateway.rs  harborbeacon.rs  lib.rs  models.rs  runtime.rs  server.rs  setup.rs
rust/harborgate/src/adapters/: webhook.rs
rust/harborgate/tests/: rust_only_guard.rs
src/: config.rs  error.rs  gateway.rs  harborbeacon.rs  server.rs  setup.rs  store.rs
src/adapters/: feishu.rs  mod.rs  weixin.rs
src/im_agent/: __init__.py  brain.py  errors.py  gateway.py  harborbeacon.py  harbornas.py  models.py  runtime_supervisor.py  server.py  session_store.py  setup_portal.py  weixin_ingress_probe.py  weixin_login.py  weixin_runner.py
tests/: conftest.py  rust_only_guard.rs  test_feishu_adapter.py  test_gateway.py  test_harborbeacon.py  test_harbornas.py  test_packaging.py  test_platform_live_gate.py  test_platform_registry.py  test_runtime_supervisor.py  test_server.py  test_v20_control_pack.py  test_webhook_adapter.py  test_weixin_adapter.py  test_weixin_runner.py
tools/: run_platform_live_gate.py  run_weixin_ingress_probe.py
