[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "im-agent-starter"
version = "0.1.0"
description = "Clean-room IM gateway starter inspired by Hermes gateway patterns"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "OpenAI Codex" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
dependencies = [
  "lark-oapi>=1.5.3",
  "qrcodegen>=1.8",
]

[project.scripts]
im-agent = "im_agent.server:main"
im-agent-weixin-login = "im_agent.weixin_login:main"
im-agent-weixin-runner = "im_agent.weixin_runner:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
