[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harborgate"
version = "0.1.0"
description = "HarborGate northbound IM transport gateway for HarborBeacon"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "OpenAI Codex" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
dependencies = [
  "cffi==1.17.1",
  "cryptography>=44",
  "lark-oapi>=1.5.3",
  "qrcodegen>=1.8",
]

[project.scripts]
harborgate = "im_agent.server:main"
harborgate-weixin-login = "im_agent.weixin_login:main"
harborgate-weixin-runner = "im_agent.weixin_runner:main"
harborgate-weixin-ingress-probe = "im_agent.weixin_ingress_probe:main"
im-agent = "im_agent.server:main"
im-agent-weixin-login = "im_agent.weixin_login:main"
im-agent-weixin-runner = "im_agent.weixin_runner:main"
im-agent-weixin-ingress-probe = "im_agent.weixin_ingress_probe:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
