[package]
name = "harborgate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust HarborGate IM transport gateway for HarborBeacon"

[lib]
name = "harborgate"
path = "src/lib.rs"

[[bin]]
name = "harborgate"
path = "src/bin/harborgate.rs"

[dependencies]
anyhow = "1"
aes = "0.8"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
ecb = { version = "0.1", features = ["alloc"] }
futures-util = "0.3"
md5 = "0.7"
mime_guess = "2"
prost = "0.13"
qrcodegen = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
